--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-svelte": "^3.4.0",
     "@snowpack/plugin-typescript": "^1.1.1",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "@snowpack/web-test-runner-plugin": "^0.1.5",
     "@testing-library/svelte": "^3.0.0",
     "@types/chai": "^4.2.13",
@@ -23,6 +24,7 @@
     "@web/test-runner": "^0.10.0",
     "autoprefixer": "^10.2.4",
     "chai": "^4.2.0",
+    "core-js": "^3.8.3",
     "snowpack": "^3.0.0",
     "svelte-preprocess": "^4.0.8",
     "tailwindcss": "^2.0.2",
